[package]
name = "auth_serv"
version = "0.1.0"
authors = ["Daniel Bearden <danbear0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
config = "0.10"
deadpool-postgres = "0.5"
deadpool = "0.5"
env_logger = "0.7"
serde = { version = "1.0", features = ["derive"]}
tokio-postgres = "0.5"
argonautica = "0.2"
futures = {version = "0.3", features = ["compat"]}
uuid = {version = "0.8", features = ["v4"]}
lazy_static = "1.4.0"
log = "0.4"
regex = "1.3"